finished connecting with database and save and list appointments

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,7 @@
               "ts": "never"
             }
         ],
-        "prettier/prettier": "error"
+        "prettier/prettier": "error",
+        "class-methods-use-this": "off"
     }
 }
