--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,7 @@
             }
         ],
         "prettier/prettier": "error",
-        "class-methods-use-this": "off"
+        "class-methods-use-this": "off",
+        "@typescript-eslint/camelcase": "off"
     }
 }
